--- a/image-search-at-scale/React/search-app/src/App.css
+++ b/image-search-at-scale/React/search-app/src/App.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   font-family: 'Arial', sans-serif;
-  background-color: #1c314f; /* Dark blue background */
+  background-color: #0a3777d4; /* Dark blue background */
   color: white;
 }
 
@@ -29,7 +29,7 @@ body {
 }
 
 .header-title {
-  font-size: 24px;
+  font-size: 40px;
   margin-top: 10px;
 }
 
