--- a/image-search-at-scale/React/search-app/src/components/ImageDisplay.css
+++ b/image-search-at-scale/React/search-app/src/components/ImageDisplay.css
@@ -2,6 +2,7 @@
   max-width: 1200px;
   margin: 0 auto;
   padding: 20px;
+
 }
 
 .image-grid {
@@ -9,32 +10,42 @@
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   grid-gap: 20px;
   justify-items: center;
+  align-items: center;
 }
 
 .image-item {
   position: relative;
-  text-align: center; /* Center align content */
+  display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+  height: 100%; /* Set a fixed height for the grid item */
+  width: 100%; /* Ensure the item takes full width */
+  padding: 10px; /* Add padding to ensure content does not touch the border */
+  box-sizing: border-box; 
+  background-color: rgb(255, 255, 255);
+  border: 10px;
+  border-radius: 5px;
+  
 }
 
 .image {
-  max-width: 100%;
-  max-height: 250px;
+  max-width: calc(100% - 20px); /* Subtract padding to ensure image does not touch the border */
+  max-height: calc(100% - 20px); /* Subtract padding to ensure image does not touch the border */
   width: auto;
   height: auto;
   display: block;
   transition: transform 0.3s ease; /* Smooth transition for hover effect */
   border-radius: 5px;
   object-fit: cover;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);/* Optional: adds a subtle shadow */
-  background-color: aliceblue; 
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);/* Optional: adds a subtle shadow */ 
 }
 
 .similarity-score {
   font-size: 18px; /* Larger font size */
   font-weight: bold; /* Bold font weight */
   margin-bottom: 10px; /* Space between score and image */
+  color: #000000; /* Change color to a tomato red */
 }
 
 .image-footer {
@@ -52,6 +63,7 @@
   overflow: hidden;
   opacity: 0;
   transition: opacity 0.3s ease, height 0.3s ease; /* Smooth transition for opacity and height change */
+  border-radius: 5px;
 }
 
 .image-item:hover .image-footer {
