Adding index size to UI

--- a/image-search-at-scale/React/search-app/src/App.css
+++ b/image-search-at-scale/React/search-app/src/App.css
@@ -84,6 +84,15 @@ body {
   display: none;
 }
 
+
+.index-size-display {
+  position: absolute;
+  margin-top: 60px;
+  top: 20px;
+  right: 20px;
+  font-family: 'Inter';
+}
+
 .search-container { 
   margin-left: 50px;
   display: flex;
