--- a/image-search-at-scale/React/search-app/src/App.css
+++ b/image-search-at-scale/React/search-app/src/App.css
@@ -142,7 +142,10 @@ body {
   margin-top: 30px;
   height: 100%;
   color: #0a3777d4;
-
+  transition: background-color 0.3s;
+  display: flex; /* Added */
+  align-items: center; /* Added */
+  justify-content: center; /* Added */
   background-color: #f7f5f5;
   height: 160px;
   width: 185px;
@@ -165,12 +168,16 @@ body {
 }
 
 .original-photo {
+  display: flex;           /* Added */
+  flex-direction: column;  /* Added */
+  align-items: center;     /* Added */
   text-align: center;
 }
 
 .original-photo-title {
   font-size: 1.2em;
   margin-bottom: 10px;
+  margin-top: 0px;
 }
 
 .original-photo-image {
