--- a/image-search-at-scale/search-app/src/App.css
+++ b/image-search-at-scale/search-app/src/App.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   font-family: 'Arial', sans-serif;
-  background-color: #1c314f; /* Dark blue background */
+  background-color: #1c314f; 
   color: white;
 }
 
