--- a/image-search-at-scale/search-app/src/components/Dropzone.css
+++ b/image-search-at-scale/search-app/src/components/Dropzone.css
@@ -3,15 +3,15 @@
     align-self: center;
     width: auto;
     height: auto;
-    overflow: hidden; /* Ensures the content fits within the border */
+    overflow: hidden; 
     display: flex;
     border: none;
     background-color: rgb(0, 0, 0, 0);
   }
   
   .drag-drop-box img {
-    border: 2px dashed #cccccc; /* Dashed border */
-    border-radius: 10px; /* Optional: add some border radius */
+    border: 2px dashed #cccccc;
+    border-radius: 10px; 
     width: auto;
     height: auto;
     max-height: 250px;
@@ -21,5 +21,5 @@
   }
   
   .drag-drop-box:hover img{
-    cursor: pointer; /* Change cursor to pointer */
+    cursor: pointer;
   }
