--- a/image-search-at-scale/search-app/src/components/Dropzone.css
+++ b/image-search-at-scale/search-app/src/components/Dropzone.css
@@ -1,15 +1,4 @@
-.drag-drop-box {
-    align-items: center;
-    align-self: center;
-    width: auto;
-    height: auto;
-    overflow: hidden; 
-    display: flex;
-    border: none;
-    background-color: rgb(0, 0, 0, 0);
-  }
-  
-  .drag-drop-box img {
+.drag-drop img {
     border: 2px dashed #cccccc;
     border-radius: 10px; 
     width: auto;
@@ -19,7 +8,7 @@
     justify-content: center;
     align-content: center;
   }
-  
-  .drag-drop-box:hover img{
+
+  .drag-drop img:hover {
     cursor: pointer;
   }
