--- a/image-search-at-scale/search-app/src/App.css
+++ b/image-search-at-scale/search-app/src/App.css
@@ -1,6 +1,5 @@
 body {
   margin: 0;
-  font-family: 'Arial', sans-serif;
   background-color: #1c314f; 
   color: white;
 }
@@ -19,16 +18,27 @@ body {
 .header-content {
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  margin-bottom: 20px;
+  justify-content: left;
+  margin-bottom: 100px;
+  background-color: rgb(255, 255, 255);
+  color: black;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1000;
 }
 
 .pinecone-logo {
-  width: 100px;
+  width: 250px;
   height: auto;
 }
 
 .header-title {
-  font-size: 24px;
+  align-self: center;
+  margin-left: 320px;
+  font-size: 40px;
+  font-weight: 500;
+  text-align: center;
   margin-top: 10px;
 }
