--- a/image-search-at-scale/search-app/src/App.css
+++ b/image-search-at-scale/search-app/src/App.css
@@ -16,10 +16,8 @@ body {
 }
 
 .header-content {
-  display: flex;
   align-items: center;
-  justify-content: left;
-  margin-bottom: 100px;
+  justify-content: space-between;
   background-color: rgb(255, 255, 255);
   color: black;
   width: 100%;
@@ -27,18 +25,20 @@ body {
   top: 0;
   left: 0;
   z-index: 1000;
+  padding: 10px;
 }
 
 .pinecone-logo {
+  position: fixed;
+  right: 0px;
+  top: 0px;
   width: 250px;
   height: auto;
+  left: 10px;
 }
 
 .header-title {
-  align-self: center;
-  margin-left: 320px;
   font-size: 40px;
   font-weight: 500;
-  text-align: center;
-  margin-top: 10px;
+  margin: 0;
 }
