--- a/image-search-at-scale/search-app/src/components/ImageDisplay.css
+++ b/image-search-at-scale/search-app/src/components/ImageDisplay.css
@@ -19,11 +19,11 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  height: 100%;
+  height: 250px;
   width: 100%;
   padding: 10px;
   box-sizing: border-box; 
-  background-color: rgb(255, 255, 255);
+  background-color: rgb(235, 238, 255);
   border: 10px;
   border-radius: 5px;
   
@@ -42,10 +42,11 @@
 }
 
 .similarity-score {
-  font-size: 18px;
-  font-weight: bold;
+  position: absolute;
+  bottom: 10px;
+  font-size: 15px;
   margin-bottom: 10px;
-  color: #000000;
+  color: #616161;
 }
 
 .image-footer {
