--- a/image-search-at-scale/search-app/src/App.css
+++ b/image-search-at-scale/search-app/src/App.css
@@ -1,6 +1,5 @@
 body {
   margin: 0;
-  font-family: 'Arial', sans-serif;
   background-color: #1c314f; 
   color: white;
 }
@@ -19,44 +18,11 @@ body {
   margin-top: 20px;
 }
 
-.search-bar {
+.text-search {
   display: flex;
-  align-items: center;
+  flex-direction: column;
+  align-items: flex-start;
   margin-right: 20px;
-}
-
-.search-input {
-  padding: 8px;
-  font-size: 16px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  margin-right: 10px;
-  width: 200px;
-}
-
-.search-button {
-  padding: 8px 16px;
-  font-size: 16px;
-  border: none;
-  border-radius: 4px;
-  background-color: #4CAF50;
-  color: white;
-  cursor: pointer;
-}
-
-.search-button:hover {
-  background-color: #45a049;
-}
-
-.search-bar button:not(:disabled):hover {
-  transition: background-color 0.3s, transform 0.3s;
-  background-color: #007506;
-}
-
-.search-bar button:disabled {
-  cursor: not-allowed;
-  opacity: 0.6;
-  background-color: #007506;
 }
 
 .App-header {
@@ -64,18 +30,29 @@ body {
 }
 
 .header-content {
-  display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-bottom: 20px;
+  background-color: rgb(255, 255, 255);
+  color: black;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+  padding: 10px;
 }
 
 .pinecone-logo {
-  width: 100px;
+  position: fixed;
+  right: 0px;
+  top: 0px;
+  width: 250px;
   height: auto;
+  left: 10px;
 }
 
 .header-title {
-  font-size: 24px;
-  margin-top: 10px;
+  font-size: 40px;
+  font-weight: 500;
+  margin: 0;
 }
