--- a/image-search-at-scale/search-app/src/components/Dropzone.css
+++ b/image-search-at-scale/search-app/src/components/Dropzone.css
@@ -1,12 +1,13 @@
 .drag-drop img {
-    border: 2px dashed #cccccc;
-    border-radius: 10px; 
-    width: auto;
-    height: auto;
-    max-height: 250px;
-    max-width: 300px;
-    justify-content: center;
-    align-content: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 100%;
+  max-height: 100%; 
+  object-fit: contain;
+  border: 2px dashed #cccccc;
+  border-radius: 10px; 
   }
 
   .drag-drop img:hover {
@@ -15,4 +16,7 @@
 
   .drag-drop {
     margin-top: 80px;
+    position: relative;
+    width: 300px;
+    height: 300px;
   }
