Index size counter (#8)
* Adding index size to UI

* Formatting

* Text search (#7)

* Adding text search functionality to backend

* Adding Text search functionality

* Adding duration functions + get images

* Merging with 'main' into Text-search

* Updating endpoints

* Renaming functions, sorting out search-bar/photo format

* Removing unused imports

* Search-button styling

* Moving top text-search result to image at top

* Removing old implementation function

* Deleting unnecesary comments/ unused variables

* Updating display image

* Click images to search (#4)

* Click on an image to send its URL to the backend

* Removes unnecessary css line

* Saves iamge from url

* New images are automatically fetched after download

* Fixes error where image background is not formatted correctly after converison

* linter changes on main.py

* ImageFetch update

* code reformatting

* flake8 fixes

* calculate duration fix

* duration calc fix

* Deletes cnn rag demo

* removes strict tag to prevent backend running twice

* removes comments

* removes unnecessary comment

* Adds more informative error responses

* Formatting

* Added styling

* Formatting

* Uncommitting removed import

* Updating error message

---------

Co-authored-by: JamesS-Pinecone <james.s@pinecone.io>

--- a/image-search-at-scale/search-app/src/components/ImageDisplay.css
+++ b/image-search-at-scale/search-app/src/components/ImageDisplay.css
@@ -33,6 +33,10 @@
   cursor: pointer;
 }
 
+.image-item:hover {
+  cursor: pointer;
+}
+
 .image {
   max-width: calc(100% - 20px);
   max-height: calc(100% - 20px);
