--- a/image-search-at-scale/search-app/src/components/Search.css
+++ b/image-search-at-scale/search-app/src/components/Search.css
@@ -3,6 +3,7 @@
     align-items: center;
     margin-right: 20px;
     margin-top: 70px;
+    position: relative;
   }
   
   .search-input {
@@ -38,4 +39,14 @@
     cursor: not-allowed;
     opacity: 0.6;
     background-color: #007506;
+  }
+  
+  .error-message {
+    margin-top: 10px;
+    width: 100%;
+    text-align: left;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    color: red;
   }
